faucet/faucet-priv-testnet/faucet-priv-testnet-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: faucet-priv-testnet-db-svc
  namespace: staging
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: faucet-priv-testnet-db
